--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,19 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+<nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <%= link_to image_tag('/logo_courant.png', class: 'navbar-brand me-4', width: "200"), root_path %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="navbar-nav me-auto my-2 my-lg-0">
+        <%= nav_link(home_admin_path, "Accueil", "fa fa-house m-2 brand-colored") %>
+        <%= nav_link(clients_path, "Clients", "fa fa-user m-2 brand-colored") %>
+        <%= nav_link(produits_path, "Produits", "fa fa-shirt m-2 brand-colored") %>
+        <%= nav_link(commandes_path, "Commandes", "fa fa-file-invoice m-2 brand-colored") %>
+        <%= nav_link(meetings_path, "Calendrier", "fa fa-calendar m-2 brand-colored") %>
+        <%= nav_link(root_path, "Analyses", "fa fa-chart-line m-2 brand-colored") %>
+        <%= nav_link(root_path, "Marketing", "fa fa-bullhorn m-2 brand-colored") %>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
