--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <%= render "shared/navbar" %>
+    <%= render "shared/navbar_admin" %>
     <div class="d-flex justify-content-center align-items-center">
       <div class="mt-2 p-2 page-max-widthed"> 
         <%= yield %>
