--- a/app/views/categorie_produits/_form.html.erb
+++ b/app/views/categorie_produits/_form.html.erb
@@ -1,19 +1,22 @@
-<%= form_with(model: categorie_produit) do |form| %>
-  <% if categorie_produit.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(categorie_produit.errors.count, "error") %> prohibited this categorie_produit from being saved:</h2>
+<div class="card m-2 p-2 light-beige-colored shadow-sm">
 
-      <ul>
-        <% categorie_produit.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+  <%= form_with(model: categorie_produit) do |form| %>
+    <% if categorie_produit.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(categorie_produit.errors.count, "error") %> prohibited this categorie_produit from being saved:</h2>
+
+        <ul>
+          <% categorie_produit.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+
+  <%= custom_form_elements(form, [:nom, :text_field], [:texte_annonce, :text_area], [:label, :text_field]) %>
+
+
   <% end %>
 
-
- <%= custom_form_elements(form, [:nom, :text_field], [:texte_annonce, :text_area], [:label, :text_field]) %>
-
-
-<% end %>
-
+</div>
