--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,21 @@
 
   <body>
     <%= render "shared/navbar_admin" %>
+    
+    <div class="container mt-2">
+      <div id="flash" class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6">
+          <%= render partial: "layouts/flash" %>
+        </div>
+      </div>
+    </div>
+
     <div class="d-flex justify-content-center align-items-center">
       <div class="mt-2 p-2 page-max-widthed"> 
         <%= yield %>
       </div>
     </div>
   </body>
+
+
 </html>
