--- a/app/views/categorie_produits/_categorie_produit.html.erb
+++ b/app/views/categorie_produits/_categorie_produit.html.erb
@@ -1,23 +1,23 @@
-<div id="<%= dom_id categorie_produit %>">
+<div id="<%= dom_id categorie_produit %>" class="my-2">
 
-    <div class="card m-2 p-2 light-beige-colored shadow-sm">
+  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
 
-  <p>
-    <strong>Nom:</strong>
-    <%= categorie_produit.nom %>
-  </p>
+    <p>
+      <strong>Nom:</strong>
+      <%= categorie_produit.nom %>
+    </p>
 
-  <p>
-    <strong>Texte annonce:</strong>
-    <%= categorie_produit.texte_annonce %>
-  </p>
+    <p>
+      <strong>Texte annonce:</strong>
+      <%= categorie_produit.texte_annonce %>
+    </p>
 
-  <p>
-    <strong>Label:</strong>
-    <%= categorie_produit.label %>
-  </p>
+    <p>
+      <strong>Label:</strong>
+      <%= categorie_produit.label %>
+    </p>
 
-  <%= links_record(categorie_produit) %>  
+    <%= links_record(categorie_produit) %>  
 
   </div>
 
