--- a/app/views/produits/index.html.erb
+++ b/app/views/produits/index.html.erb
@@ -1,14 +1,9 @@
-<p style="color: green"><%= notice %></p>
+<%= bandeau_entete("Produits", "shirt", @produits.count, "your-search") %>
 
-<h1>Produits</h1>
+<%= bloc_nouveau(Produit) %>
 
 <div id="produits">
   <% @produits.each do |produit| %>
-    <%= render produit %>
-    <p>
-      <%= link_to "Show this produit", produit %>
-    </p>
+        <%= render produit %>
   <% end %>
 </div>
-
-<%= link_to "New produit", new_produit_path %>
