--- a/app/views/commandes/show.html.erb
+++ b/app/views/commandes/show.html.erb
@@ -1,10 +1,6 @@
-<p style="color: green"><%= notice %></p>
+
+<%= card_main_model("Commande", "file") %>
 
 <%= render @commande %>
 
-<div>
-  <%= link_to "Edit this commande", edit_commande_path(@commande) %> |
-  <%= link_to "Back to commandes", commandes_path %>
-
-  <%= button_to "Destroy this commande", @commande, method: :delete %>
-</div>
+<%= return_model_index_button("Retour vers commandes", commandes_path) %>
