--- a/app/views/fournisseurs/_form.html.erb
+++ b/app/views/fournisseurs/_form.html.erb
@@ -21,7 +21,11 @@
         [:contact, :text_field], [:site, :text_field], [:notes, :text_area]) %>
 
     <% end %>
+
+    <%= custom_submit_button %>
   
   </div>
+
+  
 
 <% end %>
