--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -24,7 +24,7 @@
 
     <p>
       <strong>Categorie produit:</strong>
-      <%= produit.categorie_produit_id %>
+      <%= produit.categorie_produit.nom if produit.categorie_produit %>
     </p>
 
     <p>
