--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,52 +1,41 @@
+
 <div id="<%= dom_id article %>">
-  <p>
-    <strong>Quantite:</strong>
-    <%= article.quantite %>
-  </p>
 
-  <p>
-    <strong>Prix:</strong>
-    <%= article.prix %>
-  </p>
+  <div class="card mx-2 my-3 p-2 light-beige-colored shadow-sm">
+    <div class="row">
+      <div class="col">
+        <div class="fw-bold"> <%= article.produit.nom %>  </div>
 
-  <p>
-    <strong>Total:</strong>
-    <%= article.total %>
-  </p>
+        <%= article.locvente %>  
+        qté.: <%= article.quantite %>  
+        prix: <%= article.prix %>  
+        total: <%= article.total %>  
+        caution: <%= article.caution %>  
+    
+      </div>
+      <div class="col text-end">
+        <%= link_to "", "#collapseArticle#{dom_id(article)}", class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseArticle#{dom_id(article)}" %>
+        <%= button_to "", edit_article_path(article), method: :post, class: "btn btn-sm btn-secondary fa-solid fa-pen-to-square m-1" %>
+        <%= button_to "", article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm m-1 btn-danger fa-solid fa-trash m-1" %>
+      </div>
+    </div>
+    
 
-  <p>
-    <strong>Produit:</strong>
-    <%= article.produit_id %>
-  </p>
+    <%#= article.commande_id %>
+    <%#= article.totalcaution %>    
+    
+    <div class="collapse" id="collapseArticle<%= dom_id(article) %>">
+      <p>
+        <strong>Longueduree:</strong>
+        <%= article.longueduree %>
+      </p>
 
-  <p>
-    <strong>Commande:</strong>
-    <%= article.commande_id %>
-  </p>
+      <p>
+        <strong>Commentaires:</strong>
+        <%= article.commentaires %>
+      </p>
+    </div>
 
-  <p>
-    <strong>Locvente:</strong>
-    <%= article.locvente %>
-  </p>
-
-  <p>
-    <strong>Caution:</strong>
-    <%= article.caution %>
-  </p>
-
-  <p>
-    <strong>Totalcaution:</strong>
-    <%= article.totalcaution %>
-  </p>
-
-  <p>
-    <strong>Longueduree:</strong>
-    <%= article.longueduree %>
-  </p>
-
-  <p>
-    <strong>Commentaires:</strong>
-    <%= article.commentaires %>
-  </p>
+  </div>
 
 </div>
