--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,72 +1,79 @@
-<div id="<%= dom_id client %>">
-  <p>
-    <strong>Prenom:</strong>
-    <%= client.prenom %>
-  </p>
+<div id="<%= dom_id client %>"class="my-2">
 
-  <p>
-    <strong>Nom:</strong>
-    <%= client.nom %>
-  </p>
+  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+  
+    <p>
+      <strong>Prenom:</strong>
+      <%= client.prenom %>
+    </p>
 
-  <p>
-    <strong>Commentaires:</strong>
-    <%= client.commentaires %>
-  </p>
+    <p>
+      <strong>Nom:</strong>
+      <%= client.nom %>
+    </p>
 
-  <p>
-    <strong>Propart:</strong>
-    <%= client.propart %>
-  </p>
+    <p>
+      <strong>Commentaires:</strong>
+      <%= client.commentaires %>
+    </p>
 
-  <p>
-    <strong>Intitule:</strong>
-    <%= client.intitule %>
-  </p>
+    <p>
+      <strong>Propart:</strong>
+      <%= client.propart %>
+    </p>
 
-  <p>
-    <strong>Tel:</strong>
-    <%= client.tel %>
-  </p>
+    <p>
+      <strong>Intitule:</strong>
+      <%= client.intitule %>
+    </p>
 
-  <p>
-    <strong>Tel2:</strong>
-    <%= client.tel2 %>
-  </p>
+    <p>
+      <strong>Tel:</strong>
+      <%= client.tel %>
+    </p>
 
-  <p>
-    <strong>Mail:</strong>
-    <%= client.mail %>
-  </p>
+    <p>
+      <strong>Tel2:</strong>
+      <%= client.tel2 %>
+    </p>
 
-  <p>
-    <strong>Mail2:</strong>
-    <%= client.mail2 %>
-  </p>
+    <p>
+      <strong>Mail:</strong>
+      <%= client.mail %>
+    </p>
 
-  <p>
-    <strong>Adresse:</strong>
-    <%= client.adresse %>
-  </p>
+    <p>
+      <strong>Mail2:</strong>
+      <%= client.mail2 %>
+    </p>
 
-  <p>
-    <strong>Cp:</strong>
-    <%= client.cp %>
-  </p>
+    <p>
+      <strong>Adresse:</strong>
+      <%= client.adresse %>
+    </p>
 
-  <p>
-    <strong>Ville:</strong>
-    <%= client.ville %>
-  </p>
+    <p>
+      <strong>Cp:</strong>
+      <%= client.cp %>
+    </p>
 
-  <p>
-    <strong>Pays:</strong>
-    <%= client.pays %>
-  </p>
+    <p>
+      <strong>Ville:</strong>
+      <%= client.ville %>
+    </p>
 
-  <p>
-    <strong>Contact:</strong>
-    <%= client.contact %>
-  </p>
+    <p>
+      <strong>Pays:</strong>
+      <%= client.pays %>
+    </p>
+
+    <p>
+      <strong>Contact:</strong>
+      <%= client.contact %>
+    </p>
+
+    <%= links_record(client) %>  
+
+  </div>
 
 </div>
