--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -1,79 +1,93 @@
-<div id="<%= dom_id commande %>"class="my-2">
+<div id="<%= dom_id commande %>"class="mb-2">
 
-  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 p-3 light-beige-colored shadow-sm">
     
-    <p>
-      <strong>Nom:</strong>
-      <%= commande.nom %>
-    </p>
 
-    <p>
-      <strong>Montant:</strong>
-      <%= commande.montant %>
-    </p>
+    <div class="row">
+      <div class="col-10">
+          <strong>Commande :</strong> <%= commande.full_name %>
+      </div>
+      <div class="col-2 text-end">
+          <%= link_to "Show", "#collapseCommande", class: "btn btn-primary", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseExample" %>
+      </div>
+    </div>
 
-    <p>
-      <strong>Description:</strong>
-      <%= commande.description %>
-    </p>
+    <div class="collapse" id="collapseCommande">
 
-    <p>
-      <strong>Client:</strong>
-      <%= commande.client_id %>
-    </p>
+      <p>
+        <strong>Nom:</strong>
+        <%= commande.nom %>
+      </p>
 
-    <p>
-      <strong>Debutloc:</strong>
-      <%= commande.debutloc %>
-    </p>
+      <p>
+        <strong>Montant:</strong>
+        <%= commande.montant %>
+      </p>
 
-    <p>
-      <strong>Finloc:</strong>
-      <%= commande.finloc %>
-    </p>
+      <p>
+        <strong>Description:</strong>
+        <%= commande.description %>
+      </p>
 
-    <p>
-      <strong>Dateevent:</strong>
-      <%= commande.dateevent %>
-    </p>
+      <p>
+        <strong>Client:</strong>
+        <%= commande.client_id %>
+      </p>
 
-    <p>
-      <strong>Statutarticles:</strong>
-      <%= commande.statutarticles %>
-    </p>
+      <p>
+        <strong>Debutloc:</strong>
+        <%= commande.debutloc %>
+      </p>
 
-    <p>
-      <strong>Typeevent:</strong>
-      <%= commande.typeevent %>
-    </p>
+      <p>
+        <strong>Finloc:</strong>
+        <%= commande.finloc %>
+      </p>
 
-    <p>
-      <strong>Profile:</strong>
-      <%= commande.profile_id %>
-    </p>
+      <p>
+        <strong>Dateevent:</strong>
+        <%= commande.dateevent %>
+      </p>
 
-    <p>
-      <strong>Commentaires:</strong>
-      <%= commande.commentaires %>
-    </p>
+      <p>
+        <strong>Statutarticles:</strong>
+        <%= commande.statutarticles %>
+      </p>
 
-    <p>
-      <strong>Commentaires doc:</strong>
-      <%= commande.commentaires_doc %>
-    </p>
+      <p>
+        <strong>Typeevent:</strong>
+        <%= commande.typeevent %>
+      </p>
 
-    <p>
-      <strong>Location:</strong>
-      <%= commande.location %>
-    </p>
+      <p>
+        <strong>Profile:</strong>
+        <%= commande.profile_id %>
+      </p>
 
-    <p>
-      <strong>Devis:</strong>
-      <%= commande.devis %>
-    </p>
+      <p>
+        <strong>Commentaires:</strong>
+        <%= commande.commentaires %>
+      </p>
+
+      <p>
+        <strong>Commentaires doc:</strong>
+        <%= commande.commentaires_doc %>
+      </p>
+
+      <p>
+        <strong>Location:</strong>
+        <%= commande.location %>
+      </p>
+
+      <p>
+        <strong>Devis:</strong>
+        <%= commande.devis %>
+      </p>
+    
+      <%= links_record(commande) %>  
+
+    </div>
   
-    <%= links_record(commande) %>  
-
   </div>
 
 </div>
