--- a/app/views/commandes/_form.html.erb
+++ b/app/views/commandes/_form.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "commande_form" do %>
 
-  <div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
 
     <%= form_with(model: commande) do |form| %>
       <% if commande.errors.any? %>
