--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -2,9 +2,16 @@
 <div id="<%= dom_id article %>">
 
   <div class="card mx-2 my-3 p-2 light-beige-colored shadow-sm">
-    <div class="row">
+    <div class="row d-flex align-items-center">
+
       <div class="col">
-        <div class="fw-bold"> <%= article.produit.nom %>  </div>
+        <%= image_tag(article.produit.image1, width: 100) if article.produit.image1.present? %>  
+      </div>
+    
+      <div class="col">
+
+
+        <h4 class="fw-bold"> <%= article.produit.nom %>  </h4>
 
         <%= article.locvente %>  
         qté.: <%= article.quantite %>  
