--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,30 +1,50 @@
 <%= turbo_frame_tag "article_form" do %>
 
-<%= form_with(model: article) do |form| %>
-  <% if article.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+  <div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
-      <ul>
-        <% article.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+
+  <%= form_with(model: article) do |form| %>
+    <% if article.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+
+        <ul>
+          <% article.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <%= custom_form_elements(form, 
+      [:quantite, :number_field], [:prix, :number_field],
+      [:total, :number_field])
+    %>
+
+    <div class="container-fluid d-flex">
+      <div class="form-check mx-2">
+        <%= form.radio_button :locvente, "location", class: "form-check-input", id: "flexRadioDefault1", autocomplete: "off" %>
+        <%= form.label :locvente_location, "Location", class: "form-check-label", for: "flexRadioDefault1" %>
+      </div>
+
+      <div class="form-check mx-2">
+        <%= form.radio_button :locvente, "vente", class: "form-check-input", id: "flexRadioDefault2", autocomplete: "off" %>
+        <%= form.label :locvente_vente, "Vente", class: "form-check-label", for: "flexRadioDefault2" %>
+      </div>
     </div>
+
+
+    <%= custom_form_elements(form, 
+      [:caution, :number_field], [:longueduree, :check_box], [:commentaires, :text_area])
+    %>
+
+    <%= form.hidden_field :produit_id, value: produit_id  %>
+    <%= form.hidden_field :commande_id, value: commande_id %>
+
+    <%= custom_submit_button(form) %>
+
   <% end %>
 
-  <%= custom_form_elements(form, 
-    [:quantite, :number_field], [:prix, :number_field],
-    [:total, :number_field], [:locvente, :check_box],
-    [:caution, :number_field], [:longueduree, :check_box], [:commentaires, :text_area])
-   %>
-
-  <%= form.hidden_field :produit_id, value: produit_id  %>
-  <%= form.hidden_field :commande_id, value: commande_id %>
-
-  <%= custom_submit_button(form) %>
-
-<% end %>
-
+  </div>
 
 <% end %>
