--- a/app/views/commandes/_selection_articles.html.erb
+++ b/app/views/commandes/_selection_articles.html.erb
@@ -1,24 +1,38 @@
 
 
 
-<div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+<div class="card mx-2 my-3 light-beige-colored shadow-sm">
 
-    <% @produits.each do |produit| %>
-        <p>
-            <%= produit.full_name %>
+    <div class="card-header fs-4 fw-bold text-center">
+        Ajouter un article
+    </div>
 
-            <button class="btn btn-sm btn-warning m-2" type="button" 
-                        data-bs-toggle="collapse" data-bs-target="#collapseNewArticle<%= produit.id %>" aria-expanded="false">
-                <i class="fa-solid fa-square-plus fa-xl"></i>
-            </button>
+    <div class="card-body p-3">
+    
+        <% @produits.each do |produit| %>
+            <div class="mb-2">
 
-            <div class="collapse" id="collapseNewArticle<%= produit.id %>">
-                <div id="new" class="">
-                    <%= render partial: 'articles/form', locals: { commande_id: @commande.id, produit_id: produit.id, article: Article.new } %>
+                <%= image_tag(produit.image1, width: 100) if produit.image1.present? %>
+
+                <%= produit.full_name %>
+
+                <button class="btn btn-sm btn-warning m-2" type="button" 
+                            data-bs-toggle="collapse" data-bs-target="#collapseNewArticle<%= produit.id %>" aria-expanded="false">
+                    <i class="fa-solid fa-square-plus fa-xl"></i>
+                </button>
+
+                <div class="collapse" id="collapseNewArticle<%= produit.id %>">
+                    <div id="new" class="">
+                        <%= render partial: 'articles/form', locals: { commande_id: @commande.id, produit_id: produit.id, article: Article.new } %>
+                    </div>
                 </div>
+
             </div>
 
-        </p>
-    <% end %>
+            <hr>
+        <% end %>
+
+    </div>
+
 
 </div>
