--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -33,6 +33,16 @@
         [:fournisseur_id, :text_field], [:dateachat, :date_field], [:prixachat, :text_field]
       ) %>
 
+      <div class="input-group mb-1">
+        <%= form.label :image_principale, class:"input-group-text label-with-format" %>
+        <%= form.file_field :image1, class:"form-control m-1 p-1" %>
+      </div>
+      
+      <div class="input-group mb-1">
+        <%= form.label :images, class:"input-group-text label-with-format" %>
+        <%= form.file_field :images, multiple: true, class:"form-control m-1 p-1" %>
+      </div>
+
       <%= custom_submit_button(form) %>
 
     <% end %>
