--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -7,6 +7,8 @@
       <%= produit.nom %>
     </p>
 
+    <%= image_tag(produit.image1) if produit.image1.present? %>
+
     <p>
       <strong>Prixvente:</strong>
       <%= produit.prixvente %>
