base ajout paiement à commande

--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -1,3 +1,5 @@
+<%= card_main_model("Articles", "shirt") %>
+
 <div  id="partial-articles" class="">
     <%# recoit le turbo stream avec elements cliqués %>
 
