--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,11 +1,11 @@
 
 <div id="<%= dom_id article %>">
 
-  <div class="card mx-2 my-3 p-2 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
     <div class="row d-flex align-items-center">
 
       <div class="col">
-        <%= image_tag(article.produit.image1, width: 100) if article.produit.image1.present? %>  
+        <%= image_tag(article.produit.image1, width: 50) if article.produit.image1.present? %>  
       </div>
     
       <div class="col">
