--- a/app/views/clients/_client_mini.html.erb
+++ b/app/views/clients/_client_mini.html.erb
@@ -1,6 +1,8 @@
 <div id="<%= dom_id client %>"class="my-2">
 
-  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+  <%= card_main_model("Client", "user") %>
+
+  <div class="card mx-2 mb-3 p-3 light-beige-colored shadow-sm">
 
   <div class="row">
     <div class="col-10">
