--- a/app/views/paiement_recus/_form.html.erb
+++ b/app/views/paiement_recus/_form.html.erb
@@ -1,42 +1,28 @@
-<%= form_with(model: paiement_recu) do |form| %>
-  <% if paiement_recu.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(paiement_recu.errors.count, "error") %> prohibited this paiement_recu from being saved:</h2>
+<div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
-      <ul>
-        <% paiement_recu.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+
+  <%= form_with(model: paiement_recu) do |form| %>
+    <% if paiement_recu.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(paiement_recu.errors.count, "error") %> prohibited this paiement_recu from being saved:</h2>
+
+        <ul>
+          <% paiement_recu.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <%= custom_form_elements(form, 
+      [:typepaiement, :number_field], [:montant, :number_field],
+      [:moyen, :number_field], [:commentaires, :text_area] )
+    %>
+
+    <%= form.hidden_field :commande_id, value: commande_id %>
+
+    <%= custom_submit_button(form) %>
+
   <% end %>
-
-  <div>
-    <%= form.label :typepaiement, style: "display: block" %>
-    <%= form.text_field :typepaiement %>
-  </div>
-
-  <div>
-    <%= form.label :montant, style: "display: block" %>
-    <%= form.text_field :montant %>
-  </div>
-
-  <div>
-    <%= form.label :commande_id, style: "display: block" %>
-    <%= form.text_field :commande_id %>
-  </div>
-
-  <div>
-    <%= form.label :moyen, style: "display: block" %>
-    <%= form.text_field :moyen %>
-  </div>
-
-  <div>
-    <%= form.label :commentaires, style: "display: block" %>
-    <%= form.text_area :commentaires %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+    
+</div>
