--- a/app/views/paiement_recus/_paiement_recu.html.erb
+++ b/app/views/paiement_recus/_paiement_recu.html.erb
@@ -1,27 +1,32 @@
 <div id="<%= dom_id paiement_recu %>">
-  <p>
-    <strong>Typepaiement:</strong>
-    <%= paiement_recu.typepaiement %>
-  </p>
 
-  <p>
-    <strong>Montant:</strong>
-    <%= paiement_recu.montant %>
-  </p>
+  <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
 
-  <p>
-    <strong>Commande:</strong>
-    <%= paiement_recu.commande_id %>
-  </p>
+    <div class="row d-flex align-items-center">
 
-  <p>
-    <strong>Moyen:</strong>
-    <%= paiement_recu.moyen %>
-  </p>
+      <div class="col">
 
-  <p>
-    <strong>Commentaires:</strong>
-    <%= paiement_recu.commentaires %>
-  </p>
+        <strong>Type:</strong> <%= paiement_recu.typepaiement %>
+        <strong>Montant:</strong> <%= paiement_recu.montant %>
+        <strong>Moyen:</strong> <%= paiement_recu.moyen %>
+
+      </div>
+
+      <div class="col text-end">
+        <%= link_to "", "#collapsePaiementRecu#{dom_id(paiement_recu)}", class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapsePaiementRecu#{dom_id(paiement_recu)}" %>
+        <%= button_to "", edit_paiement_recu_path(paiement_recu), method: :post, class: "btn btn-sm btn-secondary fa-solid fa-pen-to-square m-1" %>
+        <%= button_to "", paiement_recu, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm m-1 btn-danger fa-solid fa-trash m-1" %>
+      </div>
+
+    </div>
+
+     <div class="collapse" id="collapsePaiementRecu<%= dom_id(paiement_recu) %>">
+      <p>
+        <strong>Commentaires:</strong>
+        <%= paiement_recu.commentaires %>
+      </p>
+    </div>
+
+  </div>
 
 </div>
